2015-08-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fffg.spad: Allow specifying order of solution

2015-08-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rf.spad, src/algebra/algfunc.spad:
	Fix rootSum and univariate modulo linear polynomial

2015-08-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Misc improvements
	* src/algebra/u32vec.spad: pa_to_sup(): New function
	src/algebra/modhpsol.spad: Use to_mod_pa
	src/algebra/rdeefx.spad: Prefer exponential as main kernel

2015-07-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeefx.spad, src/algebra/integrat.spad,
	src/algebra/intrf.spad, src/algebra/intef.spad
	src/algebra/intpm.spad: Consistently integrate
	trigonometric functions via complex exponentials

2015-07-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/funcpkgs.spad: Delete
	src/algebra/rdeefx.spad, src/algebra/oderf.spad,
	src/algebra/odeef.spad: Use EFACTOR instead of FSUPFACT
	src/algebra/intden.spad: Use EFACTOR
	src/algebra/exposed.lsp, src/algebra/Makefile.in: Adjust

2015-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/liouv.spad: Fix messed up fresnelS and
	fresnelC

2015-07-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad: string(): Remove unused
	function
	* src/algebra/sf.spad: sign(): Add explicit type
	of parameter

2015-07-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ore.spad: Avoid infinite recursion
	during division when coefficients are power series

2015-07-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/expr.spad: Remove useless call to 'reduc'

2015-06-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/expr.spad: Use modular method for algebraic
	gcd over Expression(Integer)

2015-06-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad: Try harder to avoid roots
	during normalization

2015-06-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
