@@ -1,3 +1,8 @@
+2015-08-07  Krystian Baclawski <krystian.baclawski@gmail.com>
+
+	* src/sman/sman.c, src/sman/session.c, src/lib/edin.c:
+	Fix some warnings
+
 2015-08-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/fffg.spad: Allow specifying order of solution
